Add the distributed claim loop: submit, claim, fence, reclaim
Work can now be published to a shared queue instead of run where it was
created, and independent workers claim and run it. This is the v1
distribution item; every primitive it needed had landed already.

  runtime.submit("default", task)   -> records the execution, runs nothing
  runtime.worker("default").start() -> claims it, runs it, releases it

Submitting is one atomic append: the execution's first event is
dual-tagged into catalyst-exec/<id> and catalyst-tasks/<queue>, so there
is no window in which an execution is durable but not yet claimable, and
no secondary index to keep consistent. Claiming is a compare-and-set on
Gumbo's tag KV. Running is the existing resume(id). Reclaiming is lease
expiry plus a retry from a small pending set -- no reaper and no orphan
scan -- so a dead worker's execution resumes at the boundary it reached
rather than restarting.

The lease is placement and is allowed to be wrong. Correctness is
FencedEventLog, which turns every append an attempt makes into a
conditional one at the seq it believes it is extending, so a worker whose
claim was stolen is rejected by storage rather than trusted.
Worker.start() refuses a log that cannot fence.

Two defects found by running it, both of which would have read as
flakiness:

- GumboEventLog.decode took each event's seq from LogEntry.streamVersion()
  -- the primary-tag accessor, and the primary tag is tags.iterator()
  .next() over an immutable set, an order Java salts per JVM run. Harmless
  while every entry had one tag; the first dual-tagged append started
  numbering executions with the queue's position on roughly half of all
  runs, leaving executions stuck in STARTING with nothing looking wrong.
  Now names the tag. This is the same mistake per-tag versions existed to
  fix, one layer up.

- Catalyst runs on virtual threads and Gumbo's async pool defaulted to
  virtual threads too, so a thread blocked on an append held a carrie